done with the whole project and documentaion